...
    private var model: Model!
    private weak var view: ViewModelProtocol!
    private var networkServies: NetworkServies!
    
    //MARK: - Property
    public var startImage: String {
        return "image1"
    }
    
    public var likeTitle: String {
        return model.like ? "❤️" : "💛"
    }
    
    public var curentImage: Data {
        return model.image!
    }

...
