...
        return button
    }()
    
    public lazy var nextPictureButton: UIButton = {
        var button = UIButton(type: .system)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 30.0)
        button.setTitle("Next", for: .normal)
        return button
    }()
    
    
    
    //MARK: - Life cycle
...
